# erpnext-banking

./: .editorconfig  .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
erpnext_banking/: _helpers.py  _retry.py  api.py  hooks.py  modules.txt  reconcile.py  sync.py
erpnext_banking/config/: desktop.py  docs.py
erpnext_banking/erpnext_banking/doctype/bank_sync_log/: bank_sync_log.json  bank_sync_log.py
erpnext_banking/erpnext_banking/doctype/fio_settings/: fio_settings.js  fio_settings.json  fio_settings.py
erpnext_banking/erpnext_banking/workspace/erpnext_banking/: erpnext_banking.json
erpnext_banking/providers/: __init__.py  base.py
erpnext_banking/providers/fio/: __init__.py  _split.py  client.py  errors.py  mapper.py
erpnext_banking/translations/: cs.csv
tests/: conftest.py  test_fio_client.py  test_fio_errors.py  test_fio_mapper.py  test_fio_split.py  test_helpers.py  test_match_existing.py  test_providers_base.py  test_reconcile_outgoing_vs.py  test_retry.py
