[project]
name = "erpnext_banking"
description = "Bank integration for ERPNext (Fio + extensible to other providers)"
authors = [{ name = "PropertyPixel-Studio", email = "krysta@propix.cz" }]
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version", "dependencies"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
